# luthier

./: .chktexrc  .gitignore  Cargo.toml  Dyplom.tex  README.md  check_latex.sh  demo.ipynb  dodatekA.tex  dokumentacja.bib  dsp.py  fix_encoding.sh  frechet.ipynb  lacheck_all.sh  mypy.ini  prototyping.ipynb  prototyping.py  pyproject.toml  readme.md  rozdzial01.tex  rozdzial02.tex  rozdzial03.tex  rozdzial04.tex  rust.ipynb  streszczenie.tex  target_function.ipynb
.github/workflows/: build.yml  latex.yml  python.yml  rust.yml  setup.sh
examples/: audio.rs  fft.rs  nodes_ui.rs
latex/: Dyplom.tex  dodatekA.tex  dodatekB.tex  dokumentacja.bib  rozdzial01.tex  rozdzial02.tex  rozdzial03.tex  rozdzial04.tex  rozdzial05.tex  rozdzial06.tex  rozdzial07.tex  skroty.tex  streszczenie.tex
luthier/: __init__.py  dsp.py  luthier.pyi
node_macro/: Cargo.toml
node_macro/src/: lib.rs  node_macro.rs
node_traits/: Cargo.toml
node_traits/src/: node_traits.rs
src/: constants.rs  ladder_filter.rs  lib.rs  main.rs  mverb.rs  node.rs
test/: conftest.py  test_environment.py  test_luthier_native_module.py  test_python_dsp.py
