[package]
name = "luthier"
version = "0.1.0"
edition = "2021"

# Required to use library in the `examples` folder
[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", default-features = true }
rodio = { version = "0.17.1", default-features = false }

# flume = "0.10.14"
rustfft = "6.1.0"
