[package]
name = "luthier"
version = "0.1.0"
edition = "2021"

[lib]
name = "luthier"
crate-type = ["cdylib"]

[workspace]
members = ["node_macro", "node_traits"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
numpy = "0.18"
colorous = "1.0.10"
node_macro = { path = "node_macro" }
node_traits = { path = "node_traits" }
# eframe = "0.21.3"
# flume = "0.10.14"
# rodio = { version = "0.17.1", default-features = true }
# rustfft = "6.1.0"
