[tool.poetry]
name = "luthier"
version = "0.1.0"
description = ""
authors = ["Wint3rmute <mateusz.baczek1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^3.6.3"
scipy = "^1.10.1"
audioflux = "^0.1.4"
pillow = "^9.5.0"
llvmlite = "^0.39.1"
librosa = "^0.10.0.post2"
dtw = "^1.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
